v0.9.0 2012-08-05 Lausanne
--------------------------

- OASIS 0.3.0 support.

v0.9.0 2012-05-05 La Forclaz (VS)
---------------------------------

First release.