@@ -1,3 +1,5 @@
+- utftrip, better tool help.
+
 v0.9.0 2012-08-05 Lausanne
 --------------------------
 
